# src/app/controller/pc_gaming_controller.ts
@@ -17,6 +17,7 @@ export class PcGamingController extends Controller {
           id: item._id,
           title: item.title,
           link: item.link,
+          created_at: item.created_at,
           submissionId: item.submissionId
         }
       });
@@ -36,7 +37,8 @@ export class PcGamingController extends Controller {
       const post:any = {
         id: item._id,
         title: item.title,
-        link: item.link, 
+        link: item.link,
+        created_at: item.created_at, 
         submissionId: item.submissionId
       }
       const comments = await Subreddit.fetchComments(post.submissionId);
