# src/app/routes.ts
@@ -13,6 +13,7 @@ const models: TsoaRoute.Models = {
             "title": { "dataType": "string", "required": true },
             "link": { "dataType": "string", "required": true },
             "img": { "dataType": "string" },
+            "created_at": { "dataType": "string", "required": true },
             "submissionId": { "dataType": "string", "required": true },
         },
     },
@@ -29,6 +30,7 @@ const models: TsoaRoute.Models = {
             "title": { "dataType": "string", "required": true },
             "link": { "dataType": "string", "required": true },
             "img": { "dataType": "string" },
+            "created_at": { "dataType": "string", "required": true },
             "submissionId": { "dataType": "string", "required": true },
             "comments": { "ref": "Comment" },
         },
@@ -38,6 +40,7 @@ const models: TsoaRoute.Models = {
             "_id": { "dataType": "string", "required": true },
             "title": { "dataType": "string", "required": true },
             "link": { "dataType": "string", "required": true },
+            "created_at": { "dataType": "string", "required": true },
             "submissionId": { "dataType": "string", "required": true },
         },
     },
@@ -46,6 +49,7 @@ const models: TsoaRoute.Models = {
             "_id": { "dataType": "string", "required": true },
             "title": { "dataType": "string", "required": true },
             "link": { "dataType": "string", "required": true },
+            "created_at": { "dataType": "string", "required": true },
             "submissionId": { "dataType": "string", "required": true },
             "comments": { "ref": "Comment" },
         },
@@ -55,6 +59,7 @@ const models: TsoaRoute.Models = {
             "_id": { "dataType": "string", "required": true },
             "title": { "dataType": "string", "required": true },
             "link": { "dataType": "string", "required": true },
+            "created_at": { "dataType": "string", "required": true },
             "submissionId": { "dataType": "string", "required": true },
         },
     },
@@ -63,6 +68,7 @@ const models: TsoaRoute.Models = {
             "_id": { "dataType": "string", "required": true },
             "title": { "dataType": "string", "required": true },
             "link": { "dataType": "string", "required": true },
+            "created_at": { "dataType": "string", "required": true },
             "submissionId": { "dataType": "string", "required": true },
             "comments": { "ref": "Comment" },
         },
@@ -72,6 +78,7 @@ const models: TsoaRoute.Models = {
             "_id": { "dataType": "string", "required": true },
             "title": { "dataType": "string", "required": true },
             "link": { "dataType": "string", "required": true },
+            "created_at": { "dataType": "string", "required": true },
             "submissionId": { "dataType": "string", "required": true },
         },
     },
@@ -80,6 +87,7 @@ const models: TsoaRoute.Models = {
             "_id": { "dataType": "string", "required": true },
             "title": { "dataType": "string", "required": true },
             "link": { "dataType": "string", "required": true },
+            "created_at": { "dataType": "string", "required": true },
             "submissionId": { "dataType": "string", "required": true },
             "comments": { "ref": "Comment" },
         },
