# swagger.json
@@ -19,6 +19,9 @@
 					"type": "string",
 					"x-nullable": true
 				},
+				"created_at": {
+					"type": "string"
+				},
 				"submissionId": {
 					"type": "string"
 				}
@@ -27,6 +30,7 @@
 				"_id",
 				"title",
 				"link",
+				"created_at",
 				"submissionId"
 			],
 			"type": "object"
@@ -65,6 +69,9 @@
 					"type": "string",
 					"x-nullable": true
 				},
+				"created_at": {
+					"type": "string"
+				},
 				"submissionId": {
 					"type": "string"
 				},
@@ -77,6 +84,7 @@
 				"_id",
 				"title",
 				"link",
+				"created_at",
 				"submissionId"
 			],
 			"type": "object"
@@ -92,6 +100,9 @@
 				"link": {
 					"type": "string"
 				},
+				"created_at": {
+					"type": "string"
+				},
 				"submissionId": {
 					"type": "string"
 				}
@@ -100,6 +111,7 @@
 				"_id",
 				"title",
 				"link",
+				"created_at",
 				"submissionId"
 			],
 			"type": "object"
@@ -115,6 +127,9 @@
 				"link": {
 					"type": "string"
 				},
+				"created_at": {
+					"type": "string"
+				},
 				"submissionId": {
 					"type": "string"
 				},
@@ -127,6 +142,7 @@
 				"_id",
 				"title",
 				"link",
+				"created_at",
 				"submissionId"
 			],
 			"type": "object"
@@ -142,6 +158,9 @@
 				"link": {
 					"type": "string"
 				},
+				"created_at": {
+					"type": "string"
+				},
 				"submissionId": {
 					"type": "string"
 				}
@@ -150,6 +169,7 @@
 				"_id",
 				"title",
 				"link",
+				"created_at",
 				"submissionId"
 			],
 			"type": "object"
@@ -165,6 +185,9 @@
 				"link": {
 					"type": "string"
 				},
+				"created_at": {
+					"type": "string"
+				},
 				"submissionId": {
 					"type": "string"
 				},
@@ -177,6 +200,7 @@
 				"_id",
 				"title",
 				"link",
+				"created_at",
 				"submissionId"
 			],
 			"type": "object"
@@ -192,6 +216,9 @@
 				"link": {
 					"type": "string"
 				},
+				"created_at": {
+					"type": "string"
+				},
 				"submissionId": {
 					"type": "string"
 				}
@@ -200,6 +227,7 @@
 				"_id",
 				"title",
 				"link",
+				"created_at",
 				"submissionId"
 			],
 			"type": "object"
@@ -215,6 +243,9 @@
 				"link": {
 					"type": "string"
 				},
+				"created_at": {
+					"type": "string"
+				},
 				"submissionId": {
 					"type": "string"
 				},
@@ -227,6 +258,7 @@
 				"_id",
 				"title",
 				"link",
+				"created_at",
 				"submissionId"
 			],
 			"type": "object"
